forum layout in post list and finish right nav

--- a/blog/templates/blog/snippets/blog_span_sidebar.html
+++ b/blog/templates/blog/snippets/blog_span_sidebar.html
@@ -1,1 +1,1 @@
-<span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">{{date|date:"M d"}} {{time}} min read</span>
+<span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">{{date|date:"d M"}} {{time}} min read</span>
