--- a/post/templates/post/post_list_2.html
+++ b/post/templates/post/post_list_2.html
@@ -53,7 +53,7 @@
       padding: 20px;
       border-bottom: 1px solid #e6ecf0;
       border-top: 1px solid #e6ecf0;
-      box-shadow: 0.1rem 0.1rem 0.4rem var(--greyLight-2), -0.1rem -0.1rem 1.2rem var(--white);
+      box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);
     }
 
     .tweet-header {
@@ -340,7 +340,7 @@
 </script>
 <script>
     function onClickedImage(){
-        $(".post-image").click(function(){
+        $(".css-9pa8cd").click(function(){
           $("#full-image").attr("src", $(this).attr("src"));
           $('#image-viewer').show();
         });
