--- a/templates/snippets/css/twitter_style.html
+++ b/templates/snippets/css/twitter_style.html
@@ -2,7 +2,18 @@
     .hoverable:hover{
         background-color: rgba(255, 255, 255, 0.3);
     }
-    
+    .upvote-click{
+        color: rgb(29, 155, 240) !important;
+    }
+    .upvote-nclick{
+        color: rgb(255,255,255);
+    }
+    .downvote-click{
+        color: rgb(0, 186, 124) !important;
+    }
+    .downvote-nclick{
+        color: rgb(255,255,255);
+    }
     .comment-hoverable:hover{
         color: rgb(29, 155, 240);
     }
