--- a/post/templates/post/snippets/post_list_tweet_box.html
+++ b/post/templates/post/snippets/post_list_tweet_box.html
@@ -37,10 +37,11 @@
     }
     .tweet-area .input{
       outline: none;
-      font-size: 17px;
+      font-size: 20px;
       min-height: inherit;
       word-wrap: break-word;
       word-break: break-all;
+      color: white;
     }
     .tweet-area .editable{
       position: relative;
