--- a/templates/snippets/sidebar_2.html
+++ b/templates/snippets/sidebar_2.html
@@ -1,7 +1,7 @@
 <div id="accordian">
     <ul class="show-dropdown">
         <li>
-            <a href="{% url 'home' %}" aria-expanded="false">
+            <a href="{% if is_home %}#{% else %}{% url 'home' %}{% endif %}" onclick="scrollTop(); return false;" aria-expanded="false">
                 <i class="fas fa-home"></i><span class="nav-text">Home</span>
             </a>
         </li>
@@ -63,101 +63,5 @@
                 <i class="fas fa-cogs"></i><span class="nav-text">Setting</span>
             </a>
         </li>
-        <!--
-        <li>
-            <a href="javascript:void(0);"><i class="far fa-address-book"></i>Address Book</a>
-            <ul>
-                <li><a href="javascript:void(0);">Reports</a></li>
-                <li><a href="javascript:void(0);">Search</a></li>
-                <li><a href="javascript:void(0);">Graphs</a></li>
-                <li><a href="javascript:void(0);">Settings</a></li>
-            </ul>
-        </li>
-        <li class="active">
-            <a href="javascript:void(0);"><i class="far fa-clone"></i>Components</a>
-            <ul class="show-dropdown">
-                <li><a href="javascript:void(0);">Today's tasks</a></li>
-                <li class="active">
-                    <a href="javascript:void(0);">DrillDown (active)</a>
-                    <ul class="show-dropdown">
-                        <li><a href="javascript:void(0);">Today's tasks</a></li>
-                        <li class="active"><a href="javascript:void(0);">Urgent</a></li>
-                        <li>
-                            <a href="javascript:void(0);">Overdues</a>
-                            <ul>
-                                <li><a href="javascript:void(0);">Today's tasks</a></li>
-                                <li><a href="javascript:void(0);">Urgent</a></li>
-                                <li><a href="javascript:void(0);">Overdues</a></li>
-                                <li><a href="javascript:void(0);">Recurring</a></li>
-                                <li>
-                                    <a href="javascript:void(0);">Calendar</a>
-                                    <ul>
-                                        <li><a href="javascript:void(0);">Current Month</a></li>
-                                        <li><a href="javascript:void(0);">Current Week</a></li>
-                                        <li><a href="javascript:void(0);">Previous Month</a></li>
-                                        <li><a href="javascript:void(0);">Previous Week</a></li>
-                                        <li><a href="javascript:void(0);">Next Month</a></li>
-                                        <li><a href="javascript:void(0);">Next Week</a></li>
-                                        <li><a href="javascript:void(0);">Team Calendar</a></li>
-                                        <li><a href="javascript:void(0);">Private Calendar</a></li>
-                                        <li><a href="javascript:void(0);">Settings</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="javascript:void(0);">Recurring</a></li>
-                        <li><a href="javascript:void(0);">Settings</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="javascript:void(0);">Overdues</a>
-                    <ul>
-                        <li><a href="javascript:void(0);">Today's tasks</a></li>
-                        <li><a href="javascript:void(0);">Urgent</a></li>
-                        <li><a href="javascript:void(0);">Overdues</a></li>
-                        <li><a href="javascript:void(0);">Recurring</a></li>
-                        <li><a href="javascript:void(0);">Settings</a></li>
-                    </ul>
-                </li>
-                <li><a href="javascript:void(0);">Recurring</a></li>
-                <li><a href="javascript:void(0);">Settings</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="javascript:void(0);"><i class="far fa-calendar-alt"></i>Calendar</a>
-            <ul>
-                <li><a href="javascript:void(0);">Current Month</a></li>
-                <li><a href="javascript:void(0);">Current Week</a></li>
-                <li><a href="javascript:void(0);">Previous Month</a></li>
-                <li><a href="javascript:void(0);">Previous Week</a></li>
-                <li><a href="javascript:void(0);">Next Month</a></li>
-                <li><a href="javascript:void(0);">Next Week</a></li>
-                <li><a href="javascript:void(0);">Team Calendar</a></li>
-                <li><a href="javascript:void(0);">Private Calendar</a></li>
-                <li><a href="javascript:void(0);">Settings</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
-            <ul>
-                <li><a href="javascript:void(0);">Global favs</a></li>
-                <li><a href="javascript:void(0);">My favs</a></li>
-                <li><a href="javascript:void(0);">Team favs</a></li>
-                <li><a href="javascript:void(0);">Settings</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="javascript:void(0);"><i class="far fa-copy"></i>Documents</a>
-        </li>
-        <li>
-            <a href="javascript:void(0);"><i class="far fa-bookmark"></i>Bookmarks</a>
-        </li>
-        <li>
-            <a href="javascript:void(0);"><i class="far fa-envelope"></i>Mail</a>
-        </li>
-        <li>
-            <a href="javascript:void(0);"><i class="far fa-heart"></i>Favorite</a>
-        </li>
-        -->
     </ul>
 </div>
