Revamp Forum Home layout

--- a/templates/snippets/css/twitter_style.html
+++ b/templates/snippets/css/twitter_style.html
@@ -66,6 +66,9 @@
     .r-13qz1uu{
         width: 100%;
     }
+    .r-q4m81j{
+        text-align: center;
+    }
     .r-1777fci{
         -moz-box-pack: center;
         justify-content: center;
@@ -151,8 +154,23 @@
     .r-16dba41{
         font-weight: 400;
     }
+    .r-19u6a5r{
+        margin-left: 12px;
+    }
+    .r-42olwf{
+        border-color: rgba(0, 0, 0, 0);
+    }
+    .r-sdzlij{
+        border-radius: 9999px;
+    }
     .r-rjixqe{
         line-height: 20px;
+    }
+    .r-1h8ys4a{
+        padding-top: 4px;
+    }
+    .r-1jeg54m{
+        white-space: normal;
     }
     .r-bcqeeo{
         min-width: 0px;
@@ -171,6 +189,9 @@
     }
     .r-xoduu5{
         display: inline-flex;
+    }
+    .r-1q142lx{
+        flex-shrink: 0;
     }
     .r-4qtqp9{
         display: inline-block;
@@ -193,6 +214,12 @@
     .r-1udh08x{
         overflow: hidden;
     }
+    .r-kemksi{
+        background-color: rgb(0, 0, 0);
+    }
+    .r-8jfcpp{
+        top: -2px;
+    }
     .r-1kqtdi0{
         border-color: rgb(47, 51, 54);
     }
@@ -205,8 +232,17 @@
     .r-rs99b7{
         border-width: 1px;
     }
+    .r-15ysp7h{
+        min-height: 32px;
+    }
+    .r-4wgw6l{
+        min-width: 32px;
+    }
     .r-6416eg{
         transition-property: background-color, box-shadow;
+    }
+    .r-15zivkp{
+
     }
     .r-1adg3ll{
         display: block;
@@ -217,8 +253,29 @@
     .r-1d2f490{
         left: 0px;
     }
+    .r-sdzlij{
+        border-radius: 9999px;
+    }
+    .r-172uzmj{
+        box-shadow: rgba(255, 255, 255, 0.03) 0px 0px 2px inset;
+    }
+    .r-ggadg3{
+        left: -2px;
+    }
     .r-u8s1d{
         position: absolute;
+    }
+    .r-1v2oles{
+        top: 50%;
+    }
+    .r-desppf{
+        transform: translateX(-50%) translateY(-50%);
+    }
+    .r-1wyvozj{
+        left: 50%;
+    }
+    .r-633pao{
+        pointer-events: none !important;
     }
     .r-ipm5af{
         top: 0px;
@@ -373,6 +430,9 @@
     }
     .r-o6sn0f{
     	color: rgb(0, 186, 124);
+    }
+    .r-wwvuq4{
+        padding: 0px;
     }
     .css-4rbku5 {
         background-color: rgba(0, 0, 0, 0);
