--- a/forum/templates/forum/forum_home.html
+++ b/forum/templates/forum/forum_home.html
@@ -216,9 +216,8 @@
 
                 {% include 'forum/snippets/forum_home_header.html' %}
 
-                <div class="ibox-content forum-container">
-                    {% include 'forum/snippets/forum_home_general_subject.html' %}
-                    {% include 'forum/snippets/forum_home_faculty_subject.html' %}
+                <div class="ibox-content forum-container" style="background-color: #000; box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);">
+                    {% include 'forum/snippets/forum_home_content.html' %}                
                 </div>
             </div>
         </div>
