revamp post detail

--- a/blog/templates/blog/blog_manage.html
+++ b/blog/templates/blog/blog_manage.html
@@ -46,12 +46,12 @@
 
     .tweet-wrap {
       /*background: #fff;*/
-      background: #fff;
+      background: #000;
       border-radius:10px;
-      padding: 30px;
+      padding: 20px;
       border-bottom: 1px solid #e6ecf0;
       border-top: 1px solid #e6ecf0;
-      box-shadow: 0.8rem 0.8rem 1.4rem var(--greyLight-2), -0.2rem -0.2rem 1.8rem var(--white);
+      box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);
     }
 
     .tweet-header {
