--- a/post/templates/post/post_list_2.html
+++ b/post/templates/post/post_list_2.html
@@ -5,188 +5,7 @@
 
 {% block head %}
 <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
-<style>
-    .post-image {
-        display: block;
-        max-width:430px;
-        max-height:135px;
-        width: auto;
-        height: auto;
-        border-radius: 10px;
-        margin-bottom: 10px;
-        cursor: pointer;
-        transition: 0.3s;
-    }
-    .post-image:hover {opacity: 0.7;}
-    .share-btn {
-        cursor: pointer;
-    }
-
-    .shared-post {
-        margin-left: 30px;
-    }
-
-    .body-post a {
-        text-decoration: none;
-    }
-
-    body {
-      font-family: 'Roboto', sans-serif;
-    }
-    img {
-      max-width:100%;
-    }
-    .avator {
-      border-radius:100px;
-      width:48px;
-      margin-right: 15px;
-    }
-
-
-    .post-name-color{
-        color: #fff;
-    }
-    .tweet-wrap {
-      /*background: #fff;*/
-      background: #000;
-      border-radius:10px;
-      padding: 20px;
-      border-bottom: 1px solid #e6ecf0;
-      border-top: 1px solid #e6ecf0;
-      box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);
-    }
-
-    .tweet-header {
-      display: flex;
-      align-items:flex-start;
-      font-size:20px;
-    }
-    .tweet-header-info {
-      font-weight:bold;
-    }
-    .tweet-header-info span {
-      color:#657786;
-      font-weight:normal;
-      margin-left: 5px;
-    }
-    .tweet-header-info p {
-      font-weight:normal;
-      margin-top: 5px;
-      
-    }
-    .tweet-img-wrap {
-      padding-left: 5px;
-    }
-
-    .tweet-info-counts {
-      display: flex;
-      margin-left: 60px;
-      margin-top: 10px;
-    }
-    .tweet-info-counts div {
-      display: flex;
-      margin-right: 20px;
-    }
-    .tweet-info-counts div svg {
-      color:#657786;
-      margin-right: 10px;
-    }
-    @media screen and (max-width:430px){
-      body {
-        padding-left: 20px;
-        padding-right: 20px;
-      }
-      .tweet-header {
-        flex-direction:column;
-      }
-      .tweet-header img {
-        margin-bottom: 20px;
-      }
-      .tweet-header-info p {
-        margin-bottom: 30px;
-      }
-      .tweet-img-wrap {
-        padding-left: 0;
-      }
-      .tweet-info-counts {
-      display: flex;
-      margin-left: 0;
-    }
-    .tweet-info-counts div {
-      margin-right: 10px;
-    }
-    }
-    .heart {
-        height: 29px;
-        width: 29px;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: grey;
-    }
-
-    .heart-clicked {
-        height: 29px;
-        width: 29px;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: coral;
-    }
-
-    /* Image Viewer */
-    /* The Modal (background) */
-    #image-viewer {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        padding-top: 100px;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgb(0,0,0);
-        background-color: rgba(0,0,0,0.9);
-    }
-    .modal-content {
-        margin: auto;
-        display: block;
-        width: 80%;
-        max-width: 700px;
-    }
-    .modal-content { 
-        animation-name: zoom;
-        animation-duration: 0.6s;
-    }
-    @keyframes zoom {
-        from {transform:scale(0)} 
-        to {transform:scale(1)}
-    }
-    #image-viewer .close {
-        position: absolute;
-        top: 15px;
-        right: 35px;
-        color: #f1f1f1;
-        font-size: 40px;
-        font-weight: bold;
-        transition: 0.3s;
-    }
-    #image-viewer .close:hover,
-    #image-viewer .close:focus {
-        color: #bbb;
-        text-decoration: none;
-        cursor: pointer;
-    }
-
-    @media only screen and (max-width: 700px){
-        .modal-content {
-            width: 100%;
-        }
-    }
-</style>
+{% include 'post/snippets/tweet_style.html' %}
 {% include 'snippets/css/twitter_style.html' %}
 {% endblock head %}
 
