--- a/post/templates/post/snippets/post_detail_header.html
+++ b/post/templates/post/snippets/post_detail_header.html
@@ -1,6 +1,5 @@
 <style>
     .wrapper{
-      color: aliceblue !important;
       background: #000;
       width: 100%;
       border-radius: 15px;
@@ -9,7 +8,10 @@
     }
 </style>
 <div style="margin-bottom: 5px;">
+    <a href="{% url 'home' %}" style="text-decoration: none;">
+        <span style="position: absolute;width: 100%;height: 100%;top: 0;left: 0;z-index: 1;"></span> 
+    </a>
     <div class="wrapper">
-        <h3 style="color: aliceblue !important;">Replies : <span id="count-reply">{{comments|length}}</span></h3>
+        <h3 style="color: aliceblue !important;">Back to Home</h3>
     </div>
 </div>
